[gd_scene load_steps=4 format=1]

[ext_resource path="res://addons/godot_data_editor/options.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_data_editor/style/light_gray_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://addons/godot_data_editor/icons/icon_load.png" type="Texture" id=3]

[node name="Options" type="AcceptDialog"]

rect/min_size = Vector2( 400, 300 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 300.0
popup/exclusive = true
window/title = "Options"
dialog/hide_on_ok = false
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 40.0
custom_styles/panel = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 377.0
margin/bottom = 255.0
custom_constants/vseparation = 10
custom_constants/hseparation = 5
columns = 2

[node name="SerializerLabel" type="Label" parent="Panel/GridContainer"]

rect/min_size = Vector2( 150, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 150.0
margin/bottom = 17.0
text = "Serializer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SerializerOption" type="OptionButton" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 155.0
margin/top = 0.0
margin/right = 370.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "json"
flat = false
align = 0
selected = 0
items = [ "json", null, false, 0, null, "binary", null, false, 1, null ]

[node name="ExtensionLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 35.0
margin/right = 150.0
margin/bottom = 49.0
text = "File Extension"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ExtensionLineEdit" type="LineEdit" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 30.0
margin/right = 370.0
margin/bottom = 54.0
text = "json"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="EncryptLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 68.0
margin/right = 150.0
margin/bottom = 82.0
text = "Encrypt Files"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EncryptCheckBox" type="CheckBox" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 64.0
margin/right = 370.0
margin/bottom = 87.0
disabled = true
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "False"
flat = false
align = 0

[node name="PasswordLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 102.0
margin/right = 150.0
margin/bottom = 116.0
text = "Password"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PasswordLineEdit" type="LineEdit" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 97.0
margin/right = 370.0
margin/bottom = 121.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ClassDirectoryLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 136.0
margin/right = 150.0
margin/bottom = 150.0
text = "Class Directory"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ClassDirectoryHBox" type="HBoxContainer" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 131.0
margin/right = 370.0
margin/bottom = 155.0
alignment = 0

[node name="ClassDirectoryLineEdit" type="LineEdit" parent="Panel/GridContainer/ClassDirectoryHBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 183.0
margin/bottom = 24.0
text = "res://classes"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ClassDirectoryButton" type="Button" parent="Panel/GridContainer/ClassDirectoryHBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 0.0
margin/right = 215.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="OutputDirectoryLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 170.0
margin/right = 150.0
margin/bottom = 184.0
text = "Output Directory"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputDirectoryHBox" type="HBoxContainer" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 165.0
margin/right = 370.0
margin/bottom = 189.0
alignment = 0

[node name="OutputDirectoryLineEdit" type="LineEdit" parent="Panel/GridContainer/OutputDirectoryHBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 183.0
margin/bottom = 24.0
text = "res://data"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="OutputDirectoryButton" type="Button" parent="Panel/GridContainer/OutputDirectoryHBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 0.0
margin/right = 215.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="SanitizeIdsLabel" type="Label" parent="Panel/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 203.0
margin/right = 150.0
margin/bottom = 217.0
text = "Sanitize IDs"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SanitizeIdsCheckBox" type="CheckBox" parent="Panel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 199.0
margin/right = 370.0
margin/bottom = 222.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "True"
flat = false
align = 0

[node name="WarnDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 110.0
popup/exclusive = false
window/title = "Alert!"
dialog/hide_on_ok = true

[connection signal="confirmed" from="." to="." method="_on_Options_confirmed"]

[connection signal="item_selected" from="Panel/GridContainer/SerializerOption" to="." method="_on_SerializerOption_item_selected"]

[connection signal="button_down" from="Panel/GridContainer/EncryptCheckBox" to="." method="_on_EncryptCheckBox_button_down"]

[connection signal="button_down" from="Panel/GridContainer/ClassDirectoryHBox/ClassDirectoryButton" to="." method="_on_ClassDirectoryButton_button_down"]

[connection signal="button_down" from="Panel/GridContainer/OutputDirectoryHBox/OutputDirectoryButton" to="." method="_on_OutputDirectoryButton_button_down"]

[connection signal="button_down" from="Panel/GridContainer/SanitizeIdsCheckBox" to="." method="_on_SanitizeIdsCheckBox_button_down"]


